# Smart_watch

./: CMakeLists.txt  README.md  README.rst  nrf52840dk_nrf52840.overlay  prj.conf
include/: background.h  background1.h  battery_monitor.h  ble_hrs.h  ble_nus.h  ble_service.h  bluetooth.h  bluetooth1.h  bmi160.h  cardiogram.h  display_ili9341.h  font1.h  font2.h  heart.h  max30101.h  rtc_driver.h  shoesw1.h  steps_img.h  watchdog.h  watchface1bg.h
src/: battery_monitor.c  display_ili9341.c  font1.c  main.c  rtc_driver.c  watchdog.c
src/bluetooth/: ble_hrs.c  ble_nus.c  ble_service.c
src/fonts/: font2.c
src/images/: background.c  background1.c  bluetooth.c  bluetooth1.c  cardiogram.c  heart.c  shoesw1.c  steps_img.c  watchface1bg.c
src/sensors/: README.md  bmi160.c  max30101.c
